# BytecodeCompiler

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  Project.cbp  Tests.cpp  Writer.cpp  compile_commands.json  readme.md  reinterpret_array.cpp  sampleAST.txt  sampleCode2.m  samplecode.m  samplecodeFlattingFns.m  samplecodeFunction.m  samplecode_fn.m  testfile.1.ma  testfile.ma  testfile.out  transformationPrecedence.txt
MAFiles/: testfileFunctions.ma  testfileSimple.ma
MFiles/: deepCode.m  sampleCode2.m  sampleFlattingFunctions.m  samplecode.m  samplecodeFib.m  samplecodeFlattingFns.m  simple.m
Source/: ErrorHandling.cpp
Source/Interpreter/: ASTNode.cpp  Compiler.cpp  Exceptions.cpp  LabelManager.cpp  Lexer.cpp  Parser.cpp  Token.cpp  TokenTypes.cpp
Source/Interpreter/Transformers/: FunctionFlatter.cpp  ImplicitReturn.cpp
Source/Tests/: Tests.cpp
Source/VM/: Assembler.cpp  ByteCode.cpp  Executer.cpp  Memory.cpp  OptCodeEngine.cpp
Tests/: Tests.cpp
src/: Assembler.cpp  ByteCode.cpp  Compiler.cpp  Executer.cpp  Memory.cpp  OperationCodes.cpp  OptCodeEngine.cpp  Tests.cpp  Types.cpp  VirtualMachine.cpp
src/Interpreter/: ASTNode.cpp  Compiler.cpp  Exceptions.cpp  Lexer.cpp  Parser.cpp  RegisterManager.cpp  Token.cpp  TokenTypes.cpp
src/Interpreter/Transformers/: FunctionFlatter.cpp
src/VM/: Assembler.cpp  Executer.cpp  Memory.cpp  OptCodeEngine.cpp
